--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<p>Всі</p>
 			<p>Продукти</p>
 			<p>Корзини</p>
+			<p class="buy">Купити</p>
 		</div>
 		<div class="buttons">
 			<button class="create_product">
